--- a/src/partials/section-components.html
+++ b/src/partials/section-components.html
@@ -6,7 +6,7 @@
         exceptional taste sensation.</p>
         <ul class="component-list list">
             <li class="component-cards">
-                <a href="" class="component-cards-interactive link">
+                <a href="#" class="component-cards-interactive link">
                     <div class="component-cards-img">
                         <img class="component-cards-img-row" src="./img/components/chocolate-tabler-mobile.png" alt="chocolate tabler">
                         <p class="component-subtitle-white ">milk chocolate</p>
@@ -24,7 +24,7 @@
                 </a>
             </li>
             <li class="component-cards">
-                <a href="" class="component-cards-interactive link">
+                <a href="#" class="component-cards-interactive link">
                     <div class="component-cards-img">
                         <img class="component-cards-img-row" src="./img/components/milk-tablet-mobile.png"
                             alt="milk">
@@ -43,7 +43,7 @@
                 </a>
             </li>
             <li class="component-cards list-item">
-                <a href="" class="component-cards-interactive link">
+                <a href="#" class="component-cards-interactive link">
                     <div class="component-cards-img">
                         <img class="component-cards-img-row" src="./img/components/nuts-tablet-mobile.png"
                             alt="nuts">
@@ -62,7 +62,7 @@
                 </a>
             </li>
             <li class="component-cards">
-                <a href="" class="component-cards-interactive link">
+                <a href="#" class="component-cards-interactive link">
                     <div class="component-cards-img">
                         <img class="component-cards-img-row" src="./img/components/coffe-tablet-mobile.png"
                             alt="chocolate tabler">
