--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -11,24 +11,11 @@
 .footer-link:is(:hover, :focus) {
    color: var(--FooterSecondText);
 }
-.footer-icon {
-   transition: stroke 500ms linear, transform 350ms linear;
-}
-.footer-icon:is(:hover, :focus) {
-   fill: var(--FooterBackground);
-   stroke: var(--FooterSecondText);
-   transform: rotate(360deg);
-}
-
-.footer-navigation-item:is(:hover, :focus) {
-   color: var(--FooterSecondText);
-}
 
 .footer-slogan {
    font-weight: 500;
    font-size: 24px;
    line-height: 1.17;
-   letter-spacing: -0.02em;
    color: var(--FooterMainText);
    margin-bottom: 32px;
 }
@@ -37,8 +24,6 @@
 }
 .footer-contact-had {
    font-weight: 500;
-   font-size: 14px;
-   line-height: 1.29;
    color: var(--FooterMainText);
    margin-bottom: 15px;
 }
@@ -67,30 +52,41 @@
 
 .footer-navigation-item {
    font-weight: 500;
-   font-size: 14px;
    line-height: 1.14;
-   letter-spacing: -0.02em;
    color: var(--FooterMainText);
-   cursor: pointer;
 }
 .footer-navigation-item:not(:last-child) {
    margin-bottom: 18px;
+}
+.footer-navigation-link:is(:hover, :focus) {
+   color: var(--FooterSecondText);
 }
 
 .footer-social-media {
    display: flex;
 }
-.footer-social-media-item {
-   margin-left: 17px;
+.footer-social-media-item:not(:last-child) {
+   margin-right: 17px;
 }
 .footer-social-media-link {
    cursor: pointer;
+   display: flex;
+   align-items: center;
+   justify-content: center;
 }
 
 .contact-and-soc-media {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
+}
+.footer-social-media-link svg {
+   transition: stroke 500ms linear, transform 350ms linear;
+}
+.footer-social-media-link:hover svg,
+.footer-social-media-link:focus svg {
+   transform: rotate(360deg);
+   stroke: var(--FooterSecondText);
 }
 .footer-icon {
    fill: var(--FooterBackground);
@@ -101,8 +97,8 @@
    .footer-contact-list {
       margin-bottom: 0;
    }
-   .slogan-container {
-      margin-right: 110px;
+   .footer-navigation-link {
+      cursor: pointer;
    }
 }
 
@@ -122,7 +118,6 @@
       font-weight: 500;
       font-size: 28px;
       line-height: 1.21;
-      letter-spacing: -0.02em;
       margin-bottom: 0;
    }
 
@@ -149,10 +144,10 @@
    .contact-and-soc-media {
       flex-wrap: nowrap;
    }
-   .footer-social-media-item {
+   /* .footer-social-media-item {
       margin-right: 17px;
       margin-left: 0;
-   }
+   } */
    .footer-social-media-link {
       transition: var(--animation);
    }
