--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -63,18 +63,27 @@
          <div class="footer-line">
             <ul class="footer-navigation-list">
                <li class="footer-navigation-item">
-                  <a href="#home">Home</a>
+                  <a class="footer-navigation-link" href="#home">Home</a>
                </li>
                <li class="footer-navigation-item">
-                  <a href="#howtomade">How is made?</a>
+                  <a class="footer-navigation-link" href="#howtomade"
+                     >How is made?</a
+                  >
                </li>
                <li class="footer-navigation-item">
-                  <a href="#products">Our products</a>
+                  <a class="footer-navigation-link" href="#products"
+                     >Our products</a
+                  >
                </li>
                <li class="footer-navigation-item">
-                  <a href="#sellers">Top sellers</a></li>
+                  <a class="footer-navigation-link" href="#sellers"
+                     >Top sellers</a
+                  >
+               </li>
                <li class="footer-navigation-item">
-                  <a href="#review">Chocolate is loved</a>
+                  <a class="footer-navigation-link" href="#review"
+                     >Chocolate is loved</a
+                  >
                </li>
             </ul>
          </div>
