--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -33,8 +33,7 @@
                         <a
                            class="footer-social-media-link"
                            href="https://www.instagram.com/"
-                           target="_blank"
-                        >
+                           target="_blank">
                            <svg class="footer-icon" width="22" height="22">
                               <use
                                  href="/img/icons/icons.svg#icon-instagram"
@@ -46,8 +45,7 @@
                         <a
                            class="footer-social-media-link"
                            href="https://twitter.com/"
-                           target="_blank"
-                        >
+                           target="_blank">
                            <svg class="footer-icon" width="22" height="22">
                               <use
                                  href="/img/icons/icons.svg#icon-twitter"
