--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -73,14 +73,14 @@
 
          <ul class="social-mobile-menu">
             <li class="social-mobile-item">
-               <a href="" class="social-mobile-link">
+               <a href="https://www.instagram.com/" class="social-mobile-link">
                   <svg width="24" height="24">
                      <use href="./img/icons/icons.svg#icon-instagram"></use>
                   </svg>
                </a>
             </li>
             <li class="social-mobile-item">
-               <a href="" class="social-mobile-link">
+               <a href="https://twitter.com/" class="social-mobile-link">
                   <svg width="24" height="24">
                      <use href="./img/icons/icons.svg#icon-twitter"></use>
                   </svg>
@@ -92,14 +92,14 @@
 
       <ul class="social-menu">
          <li class="social-item">
-            <a href="" class="social-link">
+            <a href="https://www.instagram.com/" class="social-link">
                <svg width="24" height="24">
                   <use href="./img/icons/icons.svg#icon-instagram"></use>
                </svg>
             </a>
          </li>
          <li class="social-item">
-            <a href="" class="social-link">
+            <a href="https://twitter.com/" class="social-link">
                <svg width="24" height="24">
                   <use href="./img/icons/icons.svg#icon-twitter"></use>
                </svg>
