--- a/src/partials/section-hero.html
+++ b/src/partials/section-hero.html
@@ -7,7 +7,7 @@
         of pure delight!</h2>
       <div class="hero-actions">
         <div class="hero-buttons">
-          <button class="button buy-now-button btn-open modal-scroll" type="button" data-second-modal-open>Buy
+          <button class="button buy-now-button button-orange btn-open modal-scroll" type="button" data-second-modal-open>Buy
             now</button>
           <a class="button how-its-made-button" href="#howtomade">How it&#39;s made</a>
         </div>
