--- a/src/css/section-components.css
+++ b/src/css/section-components.css
@@ -41,6 +41,7 @@ color: var(--Orange);
     position: relative;
     border-radius: 15px;
     overflow: hidden;
+    background-color: var(--Main-white);
 }
 
 .component-cards:nth-child(4n + 1) {
@@ -104,6 +105,7 @@ color: var(--Orange);
     padding: 28px;
     overflow-y: auto;
     border: 1px solid var(--Main-white);
+    background-color: var(--Main-white);
 
     transform: translate(0, 100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -111,7 +113,6 @@ color: var(--Orange);
 .component-cards-interactive:focus .overlay,
 .component-cards-interactive:hover .overlay {
     transform: translate(0, 0);
-   
 }
 
 .component-cards-animation {
