Корегування hover img and btn
Видалення лишніх коментарів та повторюваного

--- a/src/partials/modal-revievs.html
+++ b/src/partials/modal-revievs.html
@@ -36,7 +36,7 @@
                title="xxx-xxx-xx-xx"               
                class="reviews-form-input phone"
             />
-            <div class="reviews-phone-code">
+            <div class="reviews-phone-code">               
                <img src="/img/popup/ukraine.png" alt="Flag of Ukraine" />
                <span class="reviews-code">+380</span>
                <span class="reviews-slash">|</span>
@@ -53,15 +53,10 @@
       </form>
    </div>
 </div>
-<!-- =========================== NEW MODAL ======================================== -->
+<!-- ============ NEW MODAL ============== -->
 
-<div class="backdrop-two is-hidden" data-modal>
-   <div class="reviews-modal-two">
-      <!-- <button class="reviews-close-btn-two" type="button"  >
-         <svg class="reviews-close-btn-two-icon" width="24" height="24" >
-            <use href="../img/icons/icons.svg#icon-close"></use>
-         </svg>
-      </button> -->
+<div class="backdrop is-hidden" data-modal>
+   <div class="reviews-modal-two">     
       <div class="reviews-modal-two-text">
          <h2 class="reviews-two-description">Thank you for your feedback!</h2>
          <a class="reviews-send-link" href="#ancor">
