--- a/src/partials/section-sellers.html
+++ b/src/partials/section-sellers.html
@@ -4,8 +4,7 @@
          <span class="sellers-title-text">Top</span> Sellers
       </h2>
       <ul class="sellers-list">
-         <li class="sellers-list-item one">
-            <div>
+         <li class="sellers-list-item image one">            
             <picture>
                <source
                   srcset="
@@ -37,7 +36,7 @@
                />
             </picture>
          </li>
-         <li class="sellers-list-item two">
+         <li class="sellers-list-item image two">
             <picture>
                <source
                   srcset="
@@ -69,7 +68,7 @@
                />
             </picture>
          </li>
-         <li class="sellers-list-item three">
+         <li class="sellers-list-item image three">
             <picture>
                <source
                   srcset="
@@ -96,7 +95,7 @@
             </p>
          </li>
          <li class="sellers-list-item five">
-            <button class="button buy-now-button btn-open modal-scroll" type="button" data-second-modal-open>Buy now</button>
+            <button class="button buy-now-button btn-open modal-scroll sellers-btn" type="button" data-second-modal-open>Buy now</button>
          </li>
       </ul>
    </div>
