--- a/src/css/section-sellers.css
+++ b/src/css/section-sellers.css
@@ -1,7 +1,6 @@
 .sellers-section {
    padding-top: 72px;
 }
-
 .sellers-title {
    font-weight: 600;
    font-size: 20px;
@@ -15,12 +14,17 @@
 .sellers-title-text {
    color: var(--Orange);
 }
-.sellers-list-item {
+.sellers-list {
+   display: flex;
+   flex-direction: column;
+}
+
+.sellers-list-item.image {
    overflow: hidden;
    border-radius: 15px;
-  }
+}
 .sellers-list-item img {
-   transition: transform 1000ms ease;
+   transition: transform 1000ms linear;
 }
 
 .sellers-list-item:hover img {
@@ -30,28 +34,14 @@
    width: 335px;
    border-radius: 15px;
 }
-
-.sellers-list {
-   display: flex;
-   flex-direction: column;
+.sellers-list-item.image {
+   transform: scale(1);   
+   transition: transform 1000ms linear;
+}
+.sellers-list-item.image:hover {
+   transform: scale(1.03);
 }
 
-.sellers-btn {
-   display: block;
-   padding: 12px 28px;
-   font-weight: 600;   
-   line-height: 1.21;
-   color: var(--Main-white);
-   background: var(--Orange);
-   border-radius: 100px;
-   border: transparent;
-   transition: background-color var(--animation), color var(--animation);
-}
-.sellers-btn:is(:hover, :focus) {
-   background-color: #fcf1e0;
-   color: var(--Orange);
-   outline: transparent;
-}
 .sellers-list-item.five {
    margin-left: auto;
    margin-right: auto;
@@ -64,7 +54,6 @@
       padding-left: 20px;
       padding-right: 20px;
    }
-
    .sellers-list-item:nth-child(2) {
       margin-bottom: 20px;
       order: 2;
@@ -91,11 +80,7 @@
 @media screen and (min-width: 768px) {
    .sellers-section {
       padding-top: 100px;
-   }
-   /* .sellers-container {
-      padding-left: 15px;
-      padding-right: 15px;
-   } */
+   } 
    .sellers-title {
       font-size: 24px;
       line-height: 1.17;
@@ -147,7 +132,6 @@
    overflow: scroll;
    opacity: 1;
    visibility: visible;
-   transform: scale(1);
    backdrop-filter: blur(3px);
    transition: opacity var(--animation), visibility var(--animation);
 }
@@ -155,7 +139,6 @@
    opacity: 0;
    visibility: hidden;
    pointer-events: none;
-   transform: scale(1.2);
 }
 html.is-active {
    overflow: hidden;
@@ -165,7 +148,7 @@ html.is-active {
    min-width: 311px;
    min-height: 471px;
    position: absolute;
-   top: 10%;
+   top: 20%;
    left: 50%;
    transform: translate(-50%, 0%) scale(1);
    background-color: #fafafa;
@@ -173,9 +156,7 @@ html.is-active {
 
    border-radius: 15px;
 }
-.backdrop.is-hidden .modal-reviews {
-   transform: translate(-50%, -50%) scale(1.2);
-}
+
 .reviews-close-btn {
    width: 28px;
    height: 28px;
@@ -345,22 +326,20 @@ html.is-active {
 }
 
 /* ===================================== NEW MODAL ==================================== */
-.backdrop-two {
+.backdrop {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
-   z-index: 10;
+   z-index: 100;
    background-color: rgba(46, 47, 66, 0.4);
-   overflow: scroll;
-   /* transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-  visibility 250ms cubic-bezier(0.4, 0, 0.2, 1); */
    opacity: 1;
    visibility: visible;
    backdrop-filter: blur(3px);
+   transition: opacity var(--animation), visibility var(--animation);
 }
-.backdrop-two.is-hidden {
+.backdrop.is-hidden {
    opacity: 0;
    visibility: hidden;
    pointer-events: none;
@@ -370,37 +349,17 @@ html.is-active {
    flex-direction: column;
    align-items: center;
 }
-
 .reviews-modal-two {
    min-width: 311px;
-   /* min-height: 471px; */
    position: absolute;
    top: 30%;
    left: 50%;
    transform: translate(-50%, 0%) scale(1);
-   /* background-color: #fafafa; */
    padding: 15px;
-
    border-radius: 15px;
    display: flex;
    flex-direction: column;
    /* background-color: rgba(23, 26, 36, 0.2); */
-}
-
-.reviews-close-btn-two {
-   width: 28px;
-   height: 28px;
-   position: absolute;
-   top: 14px;
-   right: 14px;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   background-color: transparent;
-   border: transparent;
-   fill: var(--Main-white);
-   stroke: var(--Main-white);
-   padding: 6px;
 }
 
 .reviews-two-description {
