--- a/src/css/section-hero.css
+++ b/src/css/section-hero.css
@@ -76,7 +76,7 @@ screen and (min-resolution: 2dppx) {
    padding: 12px 28px;
    border-radius: 100px;
 
-   transition: 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+   transition: var(--animation);
 }
 
 .buy-now-button:hover,
@@ -92,7 +92,7 @@ screen and (min-resolution: 2dppx) {
    border-radius: 100px;
    background: none;
 
-   transition: 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+   transition: var(--animation);
 }
 
 .how-its-made-button:hover,
@@ -112,7 +112,7 @@ screen and (min-resolution: 2dppx) {
    align-items: center;
    gap: 12px;
 
-   transition: 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+   transition: var(--animation);
 }
 
 .scroll-down-icon {
@@ -122,7 +122,7 @@ screen and (min-resolution: 2dppx) {
    background-color: #ffffff;
    border-radius: 50%;
 
-   transition: 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+   transition: var(--animation);
 }
 
 .scroll-down-button:hover,
