--- a/src/css/section-products.css
+++ b/src/css/section-products.css
@@ -40,6 +40,10 @@
    border-radius: 15px;
 }
 
+.section-product-item:is(:hover, :focus) {
+   box-shadow: 0px 0px 10px 0px rgba(253, 146, 34, 0.2);
+}
+
 .section-product-item img {
    margin: 0 auto 8px;
    transition: transform var(--animation);
