--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -13,4 +13,5 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
    />
+   <meta name="description" content="chocolate, chocolate making, chocolate product, how to make chocolate, what is chocolate made from, semi-sweet chocolate, milk chocolate, dark chocolate, white chocolate, simply chocolate, truffles, chocolate bars, buy chocolate">
 </head>
