--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,8 +4,7 @@
          <div class="footer-tablet">
             <div class="slogan-container">
                <h2 class="footer-slogan">
-                  <span class="first-word">Chocolate</span> a delicious <br />
-                  cure for a bad day
+                  <span class="first-word">Chocolate</span> a delicious cure for a bad day
                </h2>
             </div>
             <div class="contact-and-soc-media">
