--- a/src/css/section-howtomade.css
+++ b/src/css/section-howtomade.css
@@ -7,12 +7,16 @@
    .howtomade-img-wrap {
       position: relative;
    }
+   .howtomade-video-btn,
    .howtomade-icon-wrap-mobile {
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
       z-index: 11;
+   }
+   .howtomade-video-btn {
+   padding: 2px 2px;
    }
    .howtomade-icon-mobile {
       stroke: #fff;
@@ -23,6 +27,7 @@
       display: none;
    }
 }
+/* !##################### 768px-1199px ########################### */
 @media screen and (min-width: 768px) and (max-width: 1199px) {
    .howtomade-section {
       padding-top: 100px;
@@ -42,7 +47,6 @@
 }
 /* !##################### 0px-768px ########################### */
 /* ? ======= HOWTOMADE SECTION ====== */
-
 .howtomade-title {
    font-weight: 600;
    font-size: 24px;
@@ -66,17 +70,18 @@
 .howtomade-img {
    position: relative;
    border-radius: 15px;
-   z-index: 5;
+   z-index: 11;
 }
-
 .howtomade-video {
    position: absolute;
    top: 0;
    left: 0;
    border-radius: 15px;
+   border:2px solid #fd9222;
    width: 100%;
    max-width: 335px;
    height: 100%;
+   z-index: 1;
 }
 .howtomade-desc-wrap {
    padding: 20px 14px;
@@ -115,19 +120,20 @@
 }
 /* !##################### 768px-1199px ########################### */
 @media screen and (min-width: 768px) {
-   /* .howtomade-video {
+   .howtomade-video {
       max-width: 614px;
-   } */
+   }
    .howtomade-icon-wrap-mobile,
    .howtomade-icon-mobile {
       display: none;
    }
+   .howtomade-video-btn,
    .howtomade-icon-wrap {
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      z-index: 10;
+      z-index: 11;
    }
    .howtomade-icon {
       stroke: #fff;
@@ -143,23 +149,6 @@
       max-width: 350px;
       margin-bottom: 20px;
    }
-
-   /* .howtomade-icon-link, */
-   /* .howtomade-icon-wrap-mobile {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-   }
-   .howtomade-icon-wrap {
-      width: 44px;
-      height: 44px;
-   }
-   .howtomade-icon {
-      stroke: #fff;
-      fill: none;
-      fill: #fd9222;
-   } */
 }
 /* !##################### < 1200px ########################### */
 @media screen and (min-width: 1200px) {
@@ -176,8 +165,7 @@
    .howtomade-img {
       max-width: 600px;
    }
-
-   /* .howtomade-video {
+   .howtomade-video {
       max-width: 600px;
-   } */
+   }
 }
