NavrA82-10.04-00:47-add-Emoji-title-name-and-meta
прописав щоб потім не забули Emoji title і meta. Якщо то можна буде будь-коли змінити

--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -2,7 +2,8 @@
    <meta charset="UTF-8" />
    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <title>Document</title>
+   <meta name="description" content="chocolate, chocolate making, chocolate product, how to make chocolate, what is chocolate made from, semi-sweet chocolate, milk chocolate, dark chocolate, white chocolate, simply chocolate, truffles, chocolate bars, buy chocolate">
+   <title>&#127851; Simply Chocolate</title>
    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css"
