--- a/src/css/section-revievs.css
+++ b/src/css/section-revievs.css
@@ -42,7 +42,6 @@
     line-height: 1.29;
     text-align: center;
     letter-spacing: -0.02em;
-    padding-bottom: 42px;
     padding-left: 18px;
     padding-right: 18px;
 }
@@ -52,7 +51,7 @@
     border: 1px solid rgba(17, 17, 17, 0.1);
     box-shadow: 0px 9.04932px 26.5717px rgba(215, 228, 249, 0.25);
     border-radius: 15px;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
     height: 200px;
 }
 
@@ -80,12 +79,16 @@
 }
 
 .review .swiper-pagination-bullets {
-    margin: 0 13px;
+    --swiper-pagination-bullet-horizontal-gap: 6px;
+    --swiper-pagination-bottom: -20px;
+}
+
+.review .slider {
+    margin-bottom: 52px;
 }
 
 .review .swiper-pagination {
     position: relative;
-    margin-bottom: 32px;
 }
 
 .review-btn {
@@ -120,14 +123,16 @@
         margin-bottom: 50px;
     }
     .review-cards-text {
-        padding-bottom: 42px;
         padding-left: 16px;
         padding-right: 16px;
     }
-    .review .swiper-pagination {
-        margin-bottom: 50px;}
-    .review-cards {
-        margin-bottom: 50px;
+   
+    .review .swiper-pagination-bullets {
+    --swiper-pagination-bottom: -32px;
+    }
+
+    .review .slider {
+    margin-bottom: 82px;
     }
 }
 
@@ -139,7 +144,6 @@
         padding-top: 128px;
         padding-bottom: 128px;}
     .review-cards-text {
-        padding-bottom: 26px;
         padding-left: 24px;
         padding-right: 24px;
     }
