--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -3,7 +3,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <meta name="description" content="chocolate, chocolate making, chocolate product, how to make chocolate, what is chocolate made from, semi-sweet chocolate, milk chocolate, dark chocolate, white chocolate, simply chocolate, truffles, chocolate bars, buy chocolate">
-   <title>&#127851; Simply Chocolate</title>
+   <title>Simply Chocolate</title>
    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css"
@@ -14,5 +14,4 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
    />
-   <meta name="description" content="chocolate, chocolate making, chocolate product, how to make chocolate, what is chocolate made from, semi-sweet chocolate, milk chocolate, dark chocolate, white chocolate, simply chocolate, truffles, chocolate bars, buy chocolate">
 </head>
