--- a/src/css/section-advantage.css
+++ b/src/css/section-advantage.css
@@ -17,8 +17,8 @@
    white-space: nowrap;
 }
 
-.container-benefits {
-   background-color: #1e1823;
+.benefits {
+   background-color: var(--Adventage-Section);
 }
 
 ul {
@@ -41,7 +41,7 @@ ul {
    line-height: 1.2;
    letter-spacing: -0.02em;
 
-   color: rgba(255, 255, 255, 0.7);
+   color: var(--Adventage-p-color);
 }
 
 .svg-adventages {
