--- a/src/partials/section-revievs.html
+++ b/src/partials/section-revievs.html
@@ -66,12 +66,12 @@
                     <p class="review-cards-text">This is simply the best chocolate around, and I'm just thrilled to
                         support a local company! Best local
                         chocolate - world
-                        class :)</p>
+                        class</p>
                 </div>
             </li>
         </ul>
         <div class="swiper-pagination"></div>
     </div>   
-        <button class="reviews-open-btn review-btn btn-open modal-scroll" type="button" data-first-modal-open>Leave a review</button>
+        <button class="button-reviev how-its-made-button btn-open modal-scroll" type="button" data-first-modal-open>Leave a review</button>
     </div>
 </section>
