--- a/src/partials/section-sellers.html
+++ b/src/partials/section-sellers.html
@@ -95,7 +95,7 @@
             </p>
          </li>
          <li class="sellers-list-item five">
-            <button class="button buy-now-button btn-open modal-scroll sellers-btn" type="button" data-second-modal-open>Buy now</button>
+            <button class="buy-now-button button-orange btn-open modal-scroll" type="button" data-second-modal-open>Buy now</button>
          </li>
       </ul>
    </div>
