--- a/src/css/section-components.css
+++ b/src/css/section-components.css
@@ -1,243 +1,130 @@
-@media screen and (max-width:374px) {
-    .container {
-        max-width: 365px;
-    }
+.components {
 }
-
-.components {  
-padding-top: 72px;
-padding-bottom: 36px;
+.container {
 }
-
 .component-title {
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: -0.03em;
-    text-transform: uppercase;
-    color: var(--dark);
-    margin-bottom: 24px;
-    text-align: center;
 }
-
 .component-word {
-color: var(--Orange);
 }
 .component-sub-text {
-    letter-spacing: -0.02em;
-    color: var(--dark);
-    margin-bottom: 32px;
-    text-align: center;
 }
-
-.component-list {
-    display: flex;
-    flex-direction: column;
-    row-gap: 20px;
-}
-.component-cards {
-    position: relative;
-    border-radius: 15px;
-    overflow: hidden;
-    background-color: var(--Main-white);
-}
-
-.component-cards:nth-child(4n + 1) {
-    background-color: var(--Orange);
-}
-.component-cards:nth-child(4n + 3) {
-    background-color: var(--dark-violet);
-}
-.component-cards:nth-child(2n + 2) {
-    border: 1px solid var(--Orange);
-    border-radius: 15px;
-}
-
-.component-cards-img {
-    width: 336px;
-    height: 270px;
-    display: flex;
-    flex-direction: column;
-    row-gap: 25px;
-    justify-content: center;
-    align-items: center;
-}
-
-.component-cards-img-row {
-   width: 224px;
-   height: 171px;
-}
-
-.component-subtitle {
-    font-family: 'Montserrat';
-        font-style: normal;
-        font-weight: 600;
-        font-size: 14px;
-        line-height: 1.29;
-        letter-spacing: -0.02em;
-        text-transform: uppercase;
-        position: absolute;
-        left: 28px;
-        bottom: 28px;
-}
-.component-subtitle-white {
-        font-family: 'Montserrat';
-        font-style: normal;
-        font-weight: 600;
-        font-size: 14px;
-        line-height: 1.29;
-        letter-spacing: -0.02em;
-        text-transform: uppercase;
-        color: var(--Main-white);
-        position: absolute;
-        left: 28px;
-        bottom: 28px;
-}
-
-.overlay {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    padding: 28px;
-    overflow-y: auto;
-    border: 1px solid var(--Main-white);
-    background-color: var(--Main-white);
-
-    transform: translate(0, 100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.component-cards-interactive:focus .overlay,
-.component-cards-interactive:hover .overlay {
-    transform: translate(0, 0);
-}
-
-.component-cards-animation {
+.component-menu {
    
-    position: absolute;
-    background-color: var(--Main-white);
-    overflow: hidden;
 }
-
-.component-subtitle-row {
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 18px;
-    line-height: 1.22;
-    letter-spacing: -0.03em;
-    text-transform: uppercase;
-    margin-bottom: 8px;
-   }
-
-.component-label {
-    display: flex;
-    flex-direction: row;
-    row-gap: 6px;
-   text-align: center;
-   margin-bottom: 14px;
-}
-
-.component-label-text {
-    display: flex;
-    flex-direction: row;
-    row-gap: 10px;
-    font-size: 10px;
-    line-height: 1.2;
-    color: var(--Main-white);
-    border-radius: 35px;
-    background-color: var(--Orange);
-    padding: 6px 16px;
-}
-
-.component-label-ben-text {
-    display: flex;
-    font-size: 10px;
-    line-height: 1.2;
-    background-color: var(--background-active-button);
-    margin-left: 10px;
-    border: 1px solid var(--Orange);
-    border-radius: 35px;
-    padding: 6px 16px;
-}
-
-.component-text {
-    letter-spacing: -0.02em;
-}
-
-
-
-@media screen and (min-width:375px) and (max-width:767px) {
-    .container {
-        max-width: 365px;
-    }  
-}
-
-@media screen and (min-width:768px) {
-    .components {  
-        padding-top: 100px;
-        padding-bottom: 50px;
+@media screen and (max-width:767px) {
+    .component-card {
+        margin: 0 auto;
     }
-        .component-title {
-            padding-left: 146px;
-            padding-right: 146px;
-        }
-        .component-sub-text {
-            padding-left: 109px;
-            padding-right: 109px;
-        }
-
-    .component-title {
-        margin-bottom: 28px;
-    }
-    .component-sub-text {
+    .component-card:not(:last-child) {
         margin-bottom: 50px;
     }
-    .component-list {
-        flex-direction: row;
+}
+@media screen and (min-width:768px) {
+    .component-menu {
+        display: flex;
         flex-wrap: wrap;
-        row-gap: 32px;
-        justify-content: space-between;
-    }
- 
-    .list-item {
-        order: 1;
+        gap: 25px;
+        justify-content: center;
     }
 }
 
 @media screen and (min-width:1200px) {
-    .components {  
-        padding-top: 128px;
-        padding-bottom: 64px;
-    }
-    .component-title {
-        padding-left: 380px;
-        padding-right: 380px;
-    }
-    .component-sub-text {
-        padding-left: 325px;
-        padding-right: 325px;
-     }
-       
-    .overlay {
-        padding: 13px;
-        overflow-y: scroll;
-        /* scroll-snap-align: start; */
-    }
-
-    ::-webkit-scrollbar {
-        width: 1px;
-    }
-   
-    .component-cards-img {
-        width: 270px;
-        height: 270px;
-    }
-     .list-item {
-     order: 0;
+    .component-menu {
+        flex-wrap: nowrap;
     }
 }
- 
+
+
+.component-card {
+    width: 270px;
+    height: 270px;
+    border-radius: 15px;
+    position: relative;
+    transition: transform 900ms linear;
+    transform-style: preserve-3d;
+    cursor: pointer;   
+    transform: rotateY(180deg) scaleX(-1);
+}
+.component-card:hover {
+    transform: rotateY(0deg);
+}
+
+.component-card:nth-child(1) {
+background-color: var(--Orange);
+}
+.component-card:nth-child(1) {
+  color: var(--FooterMainText);
+    }
+
+.component-card:nth-child(2) {
+    background-color: var(--FooterMainText);
+}
+.component-card:nth-child(3) {
+    background-color: var(--dark-violet);
+}
+.component-card:nth-child(3) .component-card-item-title {
+    color: #fff;
+}
+
+.component-card:nth-child(4)  {
+    background-color: var(--FooterMainText);
+}
+.component-card-item {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+}
+.item-front {
+    padding: 28px 36px 28px 28px;   
+    border-radius: 15px;
+}
+.item-back {
+    padding: 20px;
+    background-color: var(--FooterMainText);
+    border-radius: 14px;
+    border-radius: 15px;
+    backface-visibility: hidden;
+    
+
+}
+.componnents-img {
+}
+.component-card-item-title {
+    font-weight: 600;
+font-size: 18px;
+text-transform: uppercase;
+margin-top: 36px;
+}
+
+.component-card-title {
+    font-weight: 600;
+font-size: 18px;
+text-transform: uppercase;
+color: #111111;
+margin-bottom: 8px;
+}
+.overlay-subtitle-row {
+   display: flex;
+}
+.overlay-subtitle-item {
+   border: 1px solid var(--Orange);
+   padding: 6px 16px;
+   border-radius: 35px;
+   font-size: 10px;
+   line-height: 1.5;
+}
+
+.overlay-subtitle-item:nth-child(1) {
+   background-color: var(--Orange);
+   color: #fff;}
+
+.overlay-subtitle-item:nth-child(2) {
+   color: #111111;
+}
+.overlay-text {
+    margin-top: 14px;
+   color: #111111;
+}
