--- a/src/partials/section-components.html
+++ b/src/partials/section-components.html
@@ -12,16 +12,16 @@
             <div class="component-card-item item-front">
                <picture>
                   <source
-                     srcset="../img/components/chocolate-tabler-mobile.png 1x, ../img/components/chocolate-tabler-mobile-x2.png 2x"
+                     srcset="./img/components/chocolate-tabler-mobile.png 1x, ./img/components/chocolate-tabler-mobile-x2.png 2x"
                      media="(max-width:767px)"
                   />
                   <source
-                  srcset="../img/components/chocolate-item.png 1x, ./img/components/chocolate-item-x2.png 2x"
+                  srcset="./img/components/chocolate-item.png 1x, ./img/components/chocolate-item-x2.png 2x"
                   media="(min-width:767px)"
                />
                   <img
                      class="componnents-img"
-                     src="../img/components/chocolate-item.png"
+                     src="./img/components/chocolate-item.png"
                      alt="chokolate-item"
                      width="270"
                   />
@@ -42,16 +42,16 @@
             <div class="component-card-item item-front">
                <picture>
                   <source
-                     srcset="../img/components/milk-tablet-mobile.png 1x, ../img/components/milk-tablet-mobile-x2.png 2x"
+                     srcset="./img/components/milk-tablet-mobile.png 1x, ./img/components/milk-tablet-mobile-x2.png 2x"
                      media="(max-width:767px)"
                   />
                   <source
-                     srcset="../img/components/milk-desktop.png 1x, ../img/components/milk-desktop-x2.png 2x"
+                     srcset="./img/components/milk-desktop.png 1x, ./img/components/milk-desktop-x2.png 2x"
                      media="(min-width:768px)"
                   />
                   <img
                      class="componnents-img"
-                     src="../img/components/milk-desktop.png"
+                     src="./img/components/milk-desktop.png"
                      alt=""
                      width="270"
                   />
@@ -72,16 +72,16 @@
             <div class="component-card-item item-front">
                <picture>
                   <source
-                     srcset="../img/components/nuts-tablet-mobile.png 1x, ../img/components/nuts-tablet-mobile-x2.png 2x"
+                     srcset="./img/components/nuts-tablet-mobile.png 1x, ./img/components/nuts-tablet-mobile-x2.png 2x"
                      media="(max-width:767px)"
                   />
                   <source
-                     srcset="../img/components/nuts-desktop.png 1x, ../img/components/nuts-desktop-x2.png 2x"
+                     srcset="./img/components/nuts-desktop.png 1x, ./img/components/nuts-desktop-x2.png 2x"
                      media="(min-width:768px)"
                   />
                   <img
                      class="componnents-img"
-                     src="../img/components/milk-desktop.png"
+                     src="./img/components/milk-desktop.png"
                      alt=""
                      width="270"
                   />
@@ -102,16 +102,16 @@
             <div class="component-card-item item-front">
                <picture>
                   <source
-                     srcset="../img/components/coffe-tablet-mobile.png 1x, ../img/components/coffe-tablet-mobile-x2.png 2x"
+                     srcset="./img/components/coffe-tablet-mobile.png 1x, ./img/components/coffe-tablet-mobile-x2.png 2x"
                      media="(max-width:767px)"
                   />
                   <source
-                     srcset="../img/components/coffe-tablet-mobile.png 1x, ../img/components/coffe-tablet-mobile-x2.png 2x"
+                     srcset="./img/components/coffe-tablet-mobile.png 1x, ./img/components/coffe-tablet-mobile-x2.png 2x"
                      media="(min-width:768px)"
                   />
                   <img
                      class="componnents-img"
-                     src="../img/components/coffe-desktop.png"
+                     src="./img/components/coffe-desktop.png"
                      alt=""
                      width="270"
                   />
