--- a/src/css/section-products.css
+++ b/src/css/section-products.css
@@ -27,12 +27,12 @@
 .section-product-list {
    display: flex;
    align-items: center;
+   margin-bottom: 20px;
 }
 
 .section-product-item {
-   margin-bottom: 20px;
    flex-shrink: 0;
-   padding: 32px 0;
+   padding: 32px 20px;
    width: 100%;
    background-color: var(--Main-white);
    text-align: center;
@@ -62,6 +62,7 @@
 }
 
 .product-item-description {
+   font-size: 12px;
    line-height: 1.17;
    color: rgba(17, 17, 17, 0.7);
 }
@@ -93,7 +94,6 @@
 .section-product .swiper-pagination-bullet {
    width: 13px;
    height: 13px;
-   margin-right: 13px;
    background-color: var(--product-main-background);
    transition: background-color var(--animation);
 }
@@ -106,7 +106,12 @@
 }
 
 .section-product .swiper-pagination-bullets {
-   margin: 0 13px;
+   --swiper-pagination-bullet-horizontal-gap: 6px;
+   --swiper-pagination-bottom: 0;
+}
+
+.section-product .swiper-pagination-horizontal {
+   max-height: 14px;
 }
 
 @media screen and (min-width: 768px) {
@@ -121,15 +126,15 @@
       line-height: 1.17;
    }
 
-   .section-product-item {
-      margin-bottom: 32px;
-      max-width: 270px;
-   }
-
    .section-product-list {
       width: 100%;
       height: 100%;
       box-sizing: content-box;
+      margin-bottom: 32px;
+   }
+
+   .section-product-item {
+      max-width: 270px;
    }
 }
 
